# sfztools.github.io

./: .editorconfig  .gitattributes  .gitignore  404.md  Gemfile  README.md  _config.yml  atom.xml  faq.md  index.html  index.md  mkdocs.sh  mkdocs.yml  new_post.sh  package.json  pyproject.toml  setup.sh  sitemap.xml  todo.md
_includes/: cards.html  custom-scripts.html  custom-styles.html  footer.html  head.html  navigation.html  post.html  scripts.html  search.html
_layouts/: default.html  doxygen.html
_posts/: 2020-01-30-sfizz-0.2.0-release.md  2020-01-30-sfizz-v020-release.md  2020-02-29-sfizz-0.3.0-release.md  2020-02-29-sfizz-v030-release.md  2020-03-14-sfizz-0.3.1-release.md  2020-03-14-sfizz-v031-release.md  2020-04-03-sfizz-0.3.2-release.md  2020-04-03-sfizz-v032-release.md  2020-07-24-sfizz-0.4.0-release.md  2020-10-15-sfizz-0.5.0-release.md  2020-10-15-sfizz-v050-release.md  2020-10-25-sfizz-0.5.1-release.md  2020-10-25-sfizz-v051-release.md  2021-04-16-sfizz-1.0.0-release.md  2021-04-16-sfizz-v100-release.md  2021-10-23-sfizz-1.1.0-release.md  2021-11-08-sfizz-1.1.1-release.md  2022-01-15-sfizz-1.2.0-release.md  2023-04-15-sfizz-1.2.1-release.md
_scripts/: export-release-notes.js
beatbox/: index.md
contacts/: index.html
data/: assets.yml
docs/: CNAME  faq.md  index.md
faq/: index.html
gnuplot-src/: Makefile
layout/: base.j2  blogging-plugin.j2  doxygen.j2
mkdocs/: README.md  TODO.md
news/: index.html  index.md
scripts/: release.py  sfz.py
search/: index.md  search_index.json
sfizz/: .gitignore  README.md  _config.yml  contacts.md  (+8 more)
(+784 files in other folders)
