[tool.poetry]
name = "sfztools_website"
version = "1.0.0"
description = "SFZTools website"
authors = ["redtide <redtid3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
certifi = ">=2023.7.22"
gitpython = "^3.1.32"
python = ">=3.8"
css-html-js-minify = "^2.5.5"
pysass = "^0.1.0"
mkdocs = "^1.4.3"
mkdocs-blogging-plugin = "^2.2.9"
mkdocs-exclude = "^1.0.2"
mkdocs-macros-plugin = "^1.0.1"
mkdocs-mermaid2-plugin = "^0.6.0"
mkdocs-minify-plugin = "^0.6.4"
pymdown-extensions = "^10.0.1"
requests = {extras = ["security"], version = "^2.31.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
